packages/hipster/web/styles/styles.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
    Arial, sans-serif;
  background-color: black;
  border: 0;
  margin: 0;
}

#songInput {
  font-family: 'Oxanium', sans-serif;
  font-size: 1.0em;
  width: 100%;
  padding: 10px;
  background-color: #ffffff;
  color: black;
}

#game {
  background-color: black;
  width: 100%;
}

#content {
  margin: 10px;
}

#lyrics {
  position: absolute;
  right: 50px;
  font-size: 1.0em;
  font-family: 'Oxanium', sans-serif;
  color: white;
  width: 500px;
  height: 100%;
  z-index: 900;
}

@font-face {
  font-family: 'Oxanium';
  src: url('./assets/fonts/Oxanium-Regular.ttf');
}

@font-face {
  font-family: 'OxaniumBold';
  src: url('./assets/fonts/Oxanium-ExtraBold.ttf');
}

